# sodium

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sodium/: __init__.py  driver.py
